tests/errors/substructural/composition/struct_drop_with_out_ref.sim

            struct Bad: Drop { r: &out i64 }
            