tests/errors/substructural/composition/struct_drop_with_out_ref.err.expected
error: at 2:32: [COMP-DropMarkerNotSatisfied] In struct 'Bad' (marked Drop), field 'r' has type &out i64 which is not Drop
   |
 2 |             struct Bad: Drop { r: &out i64 }
   |                                ^^^^^^^^^^^
